Fix: correcao rota de removeAddress
