# src/router/usuario.router.js
@@ -21,7 +21,7 @@ router.put('/update/:id', authMiddleware, validaIdParams, validaUsuario, usuario
 
 //rotas delete
 router.delete('/remove/:id', authMiddleware, validaIdParams, usuarioController.removeUserController);
-router.delete('/removeAddress/:id', authMiddleware, validaIdParams, usuarioController.removeUserAddressController);
+router.delete('/removeAddress', authMiddleware, usuarioController.removeUserAddressController);
 router.delete('/removeFavProduct/:id', authMiddleware, validaIdParams, valida_IdBody, usuarioController.removeUserFavProductController);
 
 module.exports = router;
